--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,7 +2,7 @@ const { resolve } = require('path');
 
 module.exports = {
   env: process.env.NODE_ENV || 'development',
-  config: resolve('database', 'config/config.js'),
+  config: resolve('database', 'configs/config.js'),
   'seeders-path': resolve('database', 'seeders'),
   'migrations-path': resolve('database', 'migrations'),
 };
