--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
+    "db:migrate": "sequelize db:migrate",
+    "db:migrate:undo": "sequelize db:migrate:undo",
+    "db:migrate:status": "sequelize db:migrate:status",
+    "migration:generate": "sequelize migration:generate",
+    "seed:generate": "sequelize seed:generate"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
