--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1",
-    "sequelize-typescript": "^2.1.3"
+    "sequelize-typescript": "^2.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -65,6 +66,7 @@
     "@types/node": "^16.0.0",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
