--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
