--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "socialite-api",
   "version": "1.0.0",
   "description": "Service for sharing events and interestion places",
-  "author": "fdstypical & fishhher",
+  "author": "fdstypical <ashulmin14@gmail.com>",
   "homepage": "https://github.com/fdstypical/socialite-api",
   "private": true,
   "license": "UNLICENSED",
