--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.2",
     "jest": "28.1.2",
+    "lint-staged": "^13.0.4",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -102,5 +103,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "{src,apps,libs,test}/**/*.ts": [
+      "npm run lint",
+      "npm run format"
+    ]
   }
 }
